tests/paczka1/small_fuzzy/28411966.err
Error in line 3: J7UqhS9fh S143 21,0
Error in line 6: J7UqhS9fh A721 69,7
Error in line 1: COMnkDucJDr S143 57,5
